--- a/ioc-scope/pom.xml
+++ b/ioc-scope/pom.xml
@@ -9,11 +9,13 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>autoware</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>autoware-byName</module>
-        <module>autoware-byType</module>
-    </modules>
+    <artifactId>ioc-scope</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${springframework.version}</version>
+        </dependency>
+    </dependencies>
 
 </project>
